[gd_scene load_steps=11 format=2]

[ext_resource path="res://Src/Engine/LevelChooser.gd" type="Script" id=1]
[ext_resource path="res://Assets/SoundEffects/menu.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Menus/select a level.png" type="Texture" id=3]
[ext_resource path="res://Assets/SoundEffects/hover-menu.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Menus/level1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menus/level2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menus/level3.png" type="Texture" id=7]
[ext_resource path="res://Src/Engine/VolumeReg.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Menus/level4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menus/lv5.png" type="Texture" id=10]

[node name="LevelChooser" type="CanvasLayer"]
layer = -1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 400.0
margin_bottom = 224.0
color = Color( 0.0196078, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 48.0
margin_right = 97.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="TextureButton" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="Level2" type="TextureButton" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 65.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )

[node name="Level3" type="TextureButton" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 65.0
margin_bottom = 86.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 106.0
margin_top = 48.0
margin_right = 179.0
margin_bottom = 195.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="VBoxContainer2"]
margin_right = 73.0
margin_bottom = 26.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="Level5" type="TextureButton" parent="VBoxContainer2"]
margin_top = 30.0
margin_right = 73.0
margin_bottom = 56.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
stretch_mode = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 291.0
margin_top = 47.0
margin_right = 379.0
margin_bottom = 198.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelectionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="MenuHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="select a level" type="Sprite" parent="."]
position = Vector2( 202, 15 )
texture = ExtResource( 3 )

[node name="Controles" type="Label" parent="."]
margin_left = 181.0
margin_top = 52.0
margin_right = 374.0
margin_bottom = 100.0
text = "[W]- Jump
[A][D] - Andar
[ESPAÃ‡O] - Inverte a gravidade
[ESC] - Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeReg" parent="." instance=ExtResource( 8 )]
[connection signal="mouse_entered" from="VBoxContainer/Level1" to="." method="_on_Level1_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Level2" to="." method="_on_Level2_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Level3" to="." method="_on_Level3_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2/Level5" to="." method="_on_Level5_mouse_entered"]
[connection signal="pressed" from="VBoxContainer2/Level5" to="." method="_on_Level5_pressed"]
